# tasman-dbt-revenuecat

./: .gitignore  Makefile  README.md  dbt_project.yml  presentation.yml  pyproject.toml  readme.md  run_test.sh
.github/: CODEOWNERS
.github/workflows/: ci-check.yml
integration_tests/: dbt_project.yml  packages.yml  pyproject.toml
integration_tests/data/: seed_mocked_transactions.csv  seed_revenuecat_transactions_mocked.csv
integration_tests/seeds/: seed_revenuecat_transactions_mocked.csv
macros/: adapter_utils.sql  date_spine.sql  generate_series.sql  generate_surrogate_key.sql  get_single_value.sql
models/: date_spine.sql  src_revenuecat.yml
models/analysis/: _analysis.yml  cohort_conversion.sql  daily_subscribers.sql  daily_subscription_revenue.sql  daily_subscription_states.sql  daily_subscription_stats.sql  daily_subscriptions.sql  monthly_recurring_revenue.sql  monthly_subscription_stats.sql  revenuecat_cohort_conversion.sql  revenuecat_daily_subscribers.sql  revenuecat_daily_subscription_revenue.sql  revenuecat_daily_subscription_states.sql  revenuecat_daily_subscriptions.sql  revenuecat_monthly_recurring_revenue.sql  revenuecat_monthly_subscriptions.sql  revenuecat_user_monthly_recurring_revenue.sql  revenuecat_weekly_subscription.sql  schema.yml  weekly_subscription_stats.sql
models/core/: _core.yml  revenuecat_subscription_activities.sql  revenuecat_subscription_entitlements.sql  revenuecat_subscription_products.sql  revenuecat_subscription_transactions.sql  schema.yml
models/products/: revenuecat_all_products.sql
models/staging/: schema.yml  stg_revenuecat_transactions.sql
models/subscriptions/: revenuecat_subscription_activities.sql  revenuecat_subscription_entitlements.sql
models/tmp/: date_spine.sql  schema.yml  stg_revenuecat_transactions.sql
models/transactions/: revenuecat_all_transactions.sql  revenuecat_latest_transactions.sql
models/utils/: _utils.yml  revenuecat_date_spine.sql
tests/generic/: test_compare_to_source.sql
