# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["uv_build>=0.8.2,<1.0.0"]
build-backend = "uv_build"

[project]
name = "tasman-dbt-revenuecat"
version = "1.2.3"
description = "Package to transform RevenueCat data into actionable datasets."
authors = [
    {name = "Tasman Analytics"},
]
requires-python = ">=3.9"
readme = "README.md"

[dependency-groups]
dbt = [
    "dbt-snowflake>=1.5.4,<2",
    "dbt-bigquery>=1.5.4,<2",
]
dev = [
    "sqlfluff>=2.3.0,<3",
    "sqlfluff-templater-dbt>=2.3.0,<3",
]


[tool.uv]
default-groups = [
    "dbt",
    "dev",
]
package = false

[tool.uv.build-backend]
namespace = true
